--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@android:color/darker_gray"
+        android:background="#4db6ac"
+        android:textColor="#546e7a"
         android:password="false"
         android:text="동해물과 백두산이 마르고 닳도록 하느님이 "
         android:textSize="45sp" />
