--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -14,7 +15,12 @@
         android:layout_height="wrap_content"
         android:background="#4db6ac"
         android:textColor="#546e7a"
-        android:password="false"
         android:text="동해물과 백두산이 마르고 닳도록 하느님이 "
         android:textSize="45sp" />
+
+    <ImageView
+        android:src="@drawable/yui"
+        android:scaleType="centerCrop"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
