--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,23 +4,36 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:background="#4db6ac"
+        android:text="동해물과 백두산이"
         android:textColor="#546e7a"
-        android:text="동해물과 백두산이 마르고 닳도록 하느님이 "
         android:textSize="45sp" />
 
-    <ImageView
-        android:src="@drawable/yui"
-        android:scaleType="centerCrop"
+
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="#4db6ac"
+        android:text="동해물과 백두산이"
+        android:textColor="#546e7a"
+        android:textSize="45sp" />
+
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="#4db6ac"
+        android:text="동해물과 백두산이"
+        android:textColor="#546e7a"
+        android:textSize="45sp" />
+
+
 </LinearLayout>
