LinearLayout - 일부만 가중치적용 - weight값이 있는애 끼리만 가중치 적용.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,8 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:background="#4db6ac"
+        android:layout_height="wrap_content"
+        android:background="#43a047"
         android:text="동해물과 백두산이"
         android:textColor="#546e7a"
         android:textSize="45sp" />
@@ -28,9 +27,8 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:background="#4db6ac"
+        android:layout_height="wrap_content"
+        android:background="#b71c1c"
         android:text="동해물과 백두산이"
         android:textColor="#546e7a"
         android:textSize="45sp" />
