--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,28 +10,30 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#43a047"
-        android:text="동해물과 백두산이"
+        android:layout_alignParentBottom="true"
+        android:text="Hello"
         android:textColor="#546e7a"
-        android:textSize="45sp" />
+        android:textSize="32sp" />
 
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:background="#4db6ac"
-        android:text="동해물과 백두산이"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:text="Hello"
         android:textColor="#546e7a"
-        android:textSize="45sp" />
+        android:textSize="32sp" />
 
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#b71c1c"
-        android:text="동해물과 백두산이"
+        android:text="Hello"
         android:textColor="#546e7a"
-        android:textSize="45sp" />
+        android:textSize="32sp" />
 
 
-</LinearLayout>
+</RelativeLayout>
