RelativeLayout - RTL 언어를 사용하는 나라를 위한 align 속성
- left, right >>>> start, end

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
         android:layout_height="wrap_content"
         android:background="#4db6ac"
         android:layout_alignParentRight="true"
+        android:layout_alignParentend="true"
         android:layout_centerVertical="true"
         android:text="Hello"
         android:textColor="#546e7a"
