--- a/app/src/main/res/layout/check_box.xml
+++ b/app/src/main/res/layout/check_box.xml
@@ -12,8 +12,9 @@
 
     <TextView
         android:id="@+id/msg_text_view"
+        android:visibility="invisible"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="" />
+        android:text="체크됨" />
 
 </LinearLayout>
