--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
-    <ImageView
+    android:orientation="vertical">
+
+    <EditText
+        android:id="@+id/name_edit_text"
+        android:hint="이름을 입력하세요"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/yui" />
+        android:layout_height="wrap_content" />
 
-    <TextView
-        android:id="@+id/text_view_1"
-        android:layout_gravity="bottom"
-        android:gravity="right"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:background="#42137b"
-        android:text="수원스마트"
-        android:textColor="#546e7a"
-        android:textSize="32sp" />
+    <EditText
+        android:id="@+id/age_edit_text"
+        android:hint="나이를 입력하세요"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:text="다음 Activity로 이동"
+        android:id="@+id/next_activity_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 
-</FrameLayout>
+</LinearLayout>
