--- a/app/src/main/res/layout/activity_list_view.xml
+++ b/app/src/main/res/layout/activity_list_view.xml
@@ -9,6 +9,10 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.hji.myfirstandroidapp.exam_ListView.ListViewActivity">
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"></Spinner>
 
     <ListView
         android:id="@+id/list"
@@ -23,5 +27,6 @@
         android:layout_weight="1"
         android:background="#ab1e1e"
         android:numColumns="4"></GridView>
+
 
 </LinearLayout>
