--- a/app/src/main/res/layout/activity_list_view.xml
+++ b/app/src/main/res/layout/activity_list_view.xml
@@ -10,6 +10,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.hji.myfirstandroidapp.exam_ListView.ListViewActivity">
     <Spinner
+        android:spinnerMode="dialog"
         android:id="@+id/spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"></Spinner>
