--- a/app/src/main/res/layout/activity_fragment_exam.xml
+++ b/app/src/main/res/layout/activity_fragment_exam.xml
@@ -10,6 +10,12 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.hji.myfirstandroidapp.exam_fragment.FragmentExamActivity">
 
+    <Button
+        android:id="@+id/add_frag_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="fragment 추가" />
+
     <fragment
         android:id="@+id/frag1"
         android:name="com.hji.myfirstandroidapp.exam_fragment.ColorFragment"
@@ -18,13 +24,10 @@
         android:layout_weight="1"
         tools:layout="@layout/fragment_color" />
 
-    <fragment
-        android:id="@+id/frag2"
-        android:layout_marginTop="30dp"
-        android:name="com.hji.myfirstandroidapp.exam_fragment.ColorFragment"
+    <FrameLayout
+        android:id="@+id/contents"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        tools:layout="@layout/fragment_color" />
+        android:layout_weight="1" />
 
 </LinearLayout>
