--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -54,13 +54,20 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
+            <RadioGroup
+                android:id="@+id/radio_group"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"></RadioGroup>
+
             <RadioButton
+                android:id="@+id/man_radio"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="남성" />
 
             <RadioButton
+                android:id="@+id/woman_radio"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -69,24 +76,24 @@
 
     </LinearLayout>
 
-    <TextView
+    <Button
+        android:id="@+id/cho_gi_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="#9e9e9e"
         android:paddingLeft="50dp"
         android:paddingRight="50dp"
         android:text="초기화"
         android:textSize="20dp" />
 
-    <TextView
+    <Button
+        android:id="@+id/sign_up_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:background="#9e9e9e"
-        android:paddingLeft="50dp"
-        android:paddingRight="50dp"
+        android:paddingLeft="60dp"
+        android:paddingRight="60dp"
         android:text="가입"
         android:textSize="20dp" />
 
