--- a/app/src/main/res/layout/activity_exam_frag.xml
+++ b/app/src/main/res/layout/activity_exam_frag.xml
@@ -38,7 +38,7 @@
 
     <fragment
         android:id="@+id/frag1"
-        android:name="com.hji.myfirstandroidapp.exam.exam_colorFragment"
+        android:name="com.hji.myfirstandroidapp.exam_fragment.ColorFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
@@ -47,7 +47,7 @@
 
     <fragment
         android:id="@+id/frag2"
-        android:name="com.hji.myfirstandroidapp.exam.exam_colorFragment"
+        android:name="com.hji.myfirstandroidapp.exam_fragment.ColorFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="2dp"
@@ -57,7 +57,7 @@
 
     <fragment
         android:id="@+id/frag3"
-        android:name="com.hji.myfirstandroidapp.exam.exam_colorFragment"
+        android:name="com.hji.myfirstandroidapp.exam_fragment.ColorFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="2dp"
