--- a/app/src/main/res/layout/content_note_main.xml
+++ b/app/src/main/res/layout/content_note_main.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.hji.myfirstandroidapp.notepad.NoteMainActivity"
+    tools:context=".notepad.activitys.NoteMainActivity"
     tools:showIn="@layout/app_bar_note_main">
 
 </RelativeLayout>
