--- a/app/src/main/res/menu/note_main.xml
+++ b/app/src/main/res/menu/note_main.xml
@@ -10,4 +10,12 @@
     <item android:id="@+id/action_export"
         android:title="내보내기"
         app:showAsAction="never"/>
+
+    <item
+        android:id="@+id/action_search"
+        android:icon="@drawable/ic_search_24dp"
+        android:title="검색"
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:showAsAction="ifRoom" />
+
 </menu>
