--- a/app/src/main/res/layout/activity_picture.xml
+++ b/app/src/main/res/layout/activity_picture.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.hji.myfirstandroidapp.load_picture.PictureActivity">
+    tools:context=".load_picture.PictureActivity">
 
     <ListView
         android:id="@+id/list"
