--- a/app/src/main/res/layout/fragment_memo_edit.xml
+++ b/app/src/main/res/layout/fragment_memo_edit.xml
@@ -12,6 +12,12 @@
         android:hint="제목"
         android:maxLines="1" />
 
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scaleType="centerCrop" />
+
 
     <EditText
         android:id="@+id/contents_memo"
