--- a/app/src/main/res/layout/activity_memo_fragment_list.xml
+++ b/app/src/main/res/layout/activity_memo_fragment_list.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context="com.hji.myfirstandroidapp.notepad.fragments.MemoFragmentListActivity">
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
